--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import './Components/Layout/SectionTopic.css';
 
 /*===== VARIABLES CSS =====*/
 :root {
@@ -14,7 +15,7 @@
   --body-color: #f2f4f8;
 
   /*========== Font and typography ==========*/
-  --body-font: "Poppins", sans-serif;
+  --body-font: 'Poppins', sans-serif;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
@@ -318,6 +319,11 @@ body.dark-theme {
 .education__content,
 .experience__content {
   display: flex;
+  :last-child {
+    .education__line {
+      height: 100%;
+    }
+  }
 }
 
 .education__time,
@@ -365,6 +371,37 @@ body.dark-theme {
 .education__year {
   font-size: var(--smaller-font-size);
 }
+.education__keys__title {
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+
+.education__keys__content {
+  grid-template-columns: repeat(1, 1fr);
+  margin-left: 0.75rem;
+}
+.education__key__title {
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+}
+
+.education__key__name {
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--mb-1);
+  font-size: var(--smaller-font-size);
+}
+
+.education__key__circle {
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background-color: var(--text-color);
+  border-radius: 50%;
+  margin-right: 1rem;
+}
 
 .skills__content {
   grid-template-columns: repeat(1, 1fr);
@@ -400,6 +437,12 @@ body.dark-theme {
   top: 0;
   left: 0;
   z-index: 100;
+}
+
+.resume__right {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
 }
 
 /*========== MEDIA QUERIES ==========*/
