* chore(App.css): change text alignment in .profile__description from center to justify * chore(App.css): remove text alignment change in .section-title and .profile__description

--- a/src/App.css
+++ b/src/App.css
@@ -313,7 +313,7 @@ body.dark-theme {
 }
 
 .profile__description {
-  text-align: center;
+  text-align: justify;
 }
 
 .education__content,
@@ -489,8 +489,7 @@ body.dark-theme {
     display: inline-block;
   }
 
-  .section-title,
-  .profile__description {
+  .section-title {
     text-align: initial;
   }
 
